alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_04_colon.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
:
^
invalid package epoch
expected non-negative decimal integer, followed by a ':'
