alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_08_starts_with_dash.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
-1foo:1
^
invalid package epoch
expected non-negative decimal integer, followed by a ':'
