alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_09_ends_with_colon.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
error: invalid minimal alpm-package-version
 | 
 | 1-foo:
 |  ^
 | 
 = while parsing:
   minimal alpm-package-version: (-foo:)
   → The package version must end after the alpm-pkgver
