alpm-types/src/version/snapshots/requirement::invalid_version_requirement@case_5_invalid_pkgver.snap
---
source: alpm-types/src/version/requirement.rs
---
<3.1>3.2
 ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
